# ft

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
fractals-rs/: Cargo.toml  LICENSE_MIT
fractals-rs/src/: lib.rs
src/: App.svelte
src/lib/: Fractals.svelte  RangeInput.svelte  Selector.svelte
